# erasure

./: Cargo.toml
benches/: Cargo.toml
benches/benches/: test.rs
crates/erasure-app/: Cargo.toml  config.toml
crates/erasure-app/src/: cli_args.rs  config.rs  main.rs
crates/erasure-core/: Cargo.toml
crates/erasure-core/src/: lib.rs
crates/erasure-core/src/hardware/: cpu.rs
