[workspace]
resolver = "2"
members = [ "benches","crates/*"]

[package]
name = "disk-erasure"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
erasure-core = { path = "crates/erasure-core" }
clap = { version = "4.5.32", features = ["derive"] }
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
